# nanalogue-node

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  biome.json  build.rs  index.d.ts  index.js  native.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci-nightly.yml  ci.yml  publish.yml  test-sister-packages.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
src/: lib.rs
tests/: bamMods.test.ts  bamModsFiltering.test.ts  benchmark.test.ts  errorHandling.test.ts  fixtures.ts  helpers.ts  pagination.test.ts  peek.test.ts  readInfo.test.ts  readInfoFiltering.test.ts  readme-examples.test.ts  seqTable.test.ts  seqTableFiltering.test.ts  seqTableIntegration.test.ts  simulateModBam.test.ts  types.test.ts  windowReads.test.ts  windowReadsFiltering.test.ts
tests/data/examples/: README.md  example_1.bam  example_1.bam.bai  example_10.bam  example_10.bam.bai  example_11.bam  example_11.bam.bai  example_3.bam  example_3.bam.bai  example_7.bam  example_7.bam.bai  example_pynanalogue_1.bam  example_pynanalogue_1.bam.bai  example_pynanalogue_1.fa  example_pynanalogue_1.json  example_pynanalogue_1_first_read_rev.bam  example_pynanalogue_1_first_read_rev.bam.bai
tests/data/expected_outputs/: example_10_win_grad_json_win_10_step_1  example_10_win_grad_json_win_20_step_2  example_10_win_grad_win_10_step_1  example_10_win_grad_win_20_step_2  example_11_win_grad_json_win_10_step_1  example_11_win_grad_json_win_20_step_2  example_11_win_grad_win_10_step_1  example_11_win_grad_win_20_step_2  example_1_bam_mods.json  example_1_read_info.json  example_1_window_reads  example_1_window_reads_json  example_3_bam_mods.json  example_3_read_info.json  example_3_window_reads  example_3_window_reads_json  example_7_bam_mods.json  example_7_read_info.json  example_7_window_reads  example_7_window_reads_json
tests/data/simulation_configs/: README.md  benchmark_bam.json  simple_bam.json  two_mods_bam.json
