[package]
name = "nanalogue-node"
version = "0.1.4"
edition = "2024"
description = "Node.js bindings for Nanalogue: single-molecule BAM/Mod-BAM analysis"
license = "MIT"
authors = ["Sathish Thiyagarajan <mail@unintegrable.com>"]
repository = "https://github.com/sathish-t/nanalogue-node"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
nanalogue_core = { package = "nanalogue", version = "0.1.9" }
napi = { version = "3", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "2"
rust-htslib = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[lints.clippy]
pedantic = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
assertions_on_result_states = "deny"
cast_possible_truncation = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
exit = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
non_zero_suggestions = "deny"
panic = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
redundant_test_prefix = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method  = "deny"
semicolon_inside_block = "deny"
separated_literal_suffix = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "allow" # napi may need this like pyo3
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"

# Release profile optimized for performance
# Used when building with --release flag
[profile.release]
opt-level = 3          # Maximum optimization for speed
lto = "fat"            # Full link-time optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Smaller binary, no unwinding
strip = true           # Remove debug symbols

# Development profile for faster iteration
[profile.dev]
opt-level = 0          # No optimization for faster compilation
